--- a/asciilike/index.html
+++ b/asciilike/index.html
@@ -1994,7 +1994,8 @@ You click the [[flashlight]] on and are relieved to see the beam at full strengt
 &lt;&lt;elseif $gameState == setup.STATES.LOST_SANITY&gt;&gt;
   &lt;h1&gt;YOU DED FROM MADNESS&lt;/h1&gt;
 &lt;&lt;/if&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="13" name="Begin2" tags="noinventory" position="350,225" size="100,100">Welcome to the SugarCaves &lt;&lt;=$game.player.name&gt;&gt;!  You begin your story in the cave.  You have &lt;&lt;=$game.friends.length&gt;&gt; missing friends!
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="13" name="Begin2" tags="noinventory" position="350,225" size="100,100">You find yourself in the Sugar Caves, standing in an empty cavern at the beginning of your journey.  You search the room and find multiple paths that you can follow.  Go forth and find your &lt;&lt;=$game.friends.length&gt;&gt; missing friends!
+/* Welcome to the SugarCaves &lt;&lt;=$game.player.name&gt;&gt;!  You begin your story in the cave.  You have &lt;&lt;=$game.friends.length&gt;&gt; missing friends! */
 
 /* :: PassageHeader
 &lt;&lt;nobr&gt;&gt;
