stairs initial functionality

--- a/asciilike/index.html
+++ b/asciilike/index.html
@@ -1453,9 +1453,9 @@ class GameManager {
       }
 
       if (_downrow != null && _downcol != null)
-        this.map[d][_downrow][_downcol] = {'passage': 'down1', 'visited': false, 'sanity': 5};
+        this.map[d][_downrow][_downcol] = {'passage': 'down1', 'visited': false, 'sanity': 5, 'stairsdown': true};
       if (_uprow != null && _upcol != null)
-        this.map[d][_uprow][_upcol] = {'passage': 'up1', 'visited': false, 'sanity': 5};
+        this.map[d][_uprow][_upcol] = {'passage': 'up1', 'visited': false, 'sanity': 5, 'stairsup': true};
     }
     console.log(this.map);
   }
@@ -1675,6 +1675,13 @@ class GameManager {
     _wait.row = player.row;
     _wait.col = player.col;
     _wait.valid = true;
+
+    // override for stairs
+    if (this.map[player.depth][player.row][player.col].stairsup)
+      _wait.text = "<";
+    else if (this.map[player.depth][player.row][player.col].stairsdown)
+      _wait.text = ">";
+
     _passages.push(_wait);
 
     for (let i = 0; i < _passages.length; i++) {
@@ -1925,6 +1932,10 @@ You click the [[flashlight]] on and are relieved to see the beam at full strengt
   
             &lt;&lt;if _nextPassages[_i].text == &quot;.&quot;&gt;&gt;
               &lt;&lt;set _imgPath to &quot;assets/elementCircle.png&quot;&gt;&gt;
+            &lt;&lt;elseif _nextPassages[_i].text == &quot;&lt;&quot;&gt;&gt;
+              &lt;&lt;set _imgPath to &quot;assets/arrowSmall-west.png&quot;&gt;&gt;
+            &lt;&lt;elseif _nextPassages[_i].text == &quot;&gt;&quot;&gt;&gt;
+              &lt;&lt;set _imgPath to &quot;assets/arrowSmall-east.png&quot;&gt;&gt;
             &lt;&lt;else&gt;&gt;
               &lt;&lt;if _nextPassages[_i].text == &quot;n&quot;&gt;&gt;
                 &lt;&lt;set _imgPath to &quot;assets/arrowSmall-north.png&quot;&gt;&gt;
