--- a/asciilike/index.html
+++ b/asciilike/index.html
@@ -1677,16 +1677,22 @@ class GameManager {
     _wait.valid = true;
 
     // override for stairs
-    if (this.map[player.depth][player.row][player.col].stairsup)
+    if (this.map[player.depth][player.row][player.col].stairsup) {
       _wait.text = "<";
-    else if (this.map[player.depth][player.row][player.col].stairsdown)
+      _wait.stairsup = true; // duplicate for easier check in TW
+      _wait.depth = player.depth-1;
+    } else if (this.map[player.depth][player.row][player.col].stairsdown) {
       _wait.text = ">";
+      _wait.stairsdown = true; // duplicate for easier check in TW
+      _wait.depth = player.depth+1;
+    } else {
+      // set depths to player's
+      for (let i = 0; i < _passages.length; i++) {
+        _passages[i]['depth'] = player.depth;
+      }
+    }
 
     _passages.push(_wait);
-
-    for (let i = 0; i < _passages.length; i++) {
-      _passages[i]['depth'] = player.depth;
-    }
 
     return _passages;
   }
@@ -1959,9 +1965,16 @@ You click the [[flashlight]] on and are relieved to see the beam at full strengt
             /* can travel this way */
             &lt;&lt;if _nextPassages[_i].valid&gt;&gt;
               &lt;&lt;button [img[_imgPath][Begin]]&gt;&gt;
+                &lt;&lt;if _nextPassages[_i].stairsdown == true or _nextPassages[_i].stairsup == true&gt;&gt;
+                  &lt;&lt;set $game.player.depth to _nextPassages[_i].depth&gt;&gt;
+                  &lt;&lt;set $game.player.row to 0&gt;&gt;
+                  &lt;&lt;set $game.player.col to 0&gt;&gt;
+                &lt;&lt;else&gt;&gt;
+                  &lt;&lt;set $game.player.row to _nextPassages[_i].row&gt;&gt;
+                  &lt;&lt;set $game.player.col to _nextPassages[_i].col&gt;&gt;
+                &lt;&lt;/if&gt;&gt;
+
                 &lt;&lt;set _nextPassage to $game.getPassage(_nextPassages[_i].row, _nextPassages[_i].col, _nextPassages[_i].depth)&gt;&gt;
-                &lt;&lt;set $game.player.row to _nextPassages[_i].row&gt;&gt;
-                &lt;&lt;set $game.player.col to _nextPassages[_i].col&gt;&gt;
     
                 /* Update sanity based on +/- of the room you&#39;re going to */
                 &lt;&lt;set _sanity to $game.player.updateSanity($game.getMapSanity(_nextPassages[_i].row, _nextPassages[_i].col, _nextPassages[_i].depth))&gt;&gt;
