--- a/asciilike/index.html
+++ b/asciilike/index.html
@@ -526,7 +526,8 @@ c/o: https://qjzhvmqlzvoo5lqnrvuhmg-on.drv.tw/UInv/Sample_Code.html#Drunk%20Text
   background: #fff;
 }
 .visited {
-  background: rgba(7, 52, 61, 0.75);
+  /* background: rgba(7, 52, 61, 0.75); */
+  box-shadow: inset 0 0 0 99999px rgba(255,255,255,0.5);
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/* twine-user-script #1: "Story JavaScript" */
 /* js/constants.js, js/room.js, js/traceryGen.js, js/person.js, js/macroWhen.js */
 /* twine-user-script #2: "fast-simplex-noise.js" */
@@ -1482,7 +1483,9 @@ class GameManager {
 
   // return a random event
   randomEvent() {
-    if (Math.random() > 0.25) {
+    if (this.player.row == 0 && this.player.col == 0) // protect the 'starting location'
+      return { 'event': null, 'return': false };
+    else if (Math.random() > 0.25) {
       let _r = Math.random();
 
       // spores
@@ -1510,10 +1513,13 @@ class GameManager {
         let _cls;
         if (this.player.row == r && this.player.col == c)
           _cls = 'active';
-        else if (this.getPassageVisited(r, c, depth))
-          _cls = 'visited';
+        // else if (this.getPassageVisited(r, c, depth))
+        //   _cls = 'visited';
         else {
-          _cls = '';
+          if (this.getPassageVisited(r, c, depth))
+            _cls = 'visited';
+          else
+            _cls = '';
 
           // tbd - temp viz
           if (this.getPassage(r, c, depth) == setup.prefabs[0])
@@ -1674,6 +1680,7 @@ class GameManager {
     let _wait = { header: "wait", text: "." };
     _wait.row = player.row;
     _wait.col = player.col;
+    _wait.depth = player.depth;
     _wait.valid = true;
 
     // override for stairs
@@ -1685,11 +1692,12 @@ class GameManager {
       _wait.text = ">";
       _wait.stairsdown = true; // duplicate for easier check in TW
       _wait.depth = player.depth+1;
-    } else {
-      // set depths to player's
-      for (let i = 0; i < _passages.length; i++) {
+    }
+
+    // set depths to player's
+    for (let i = 0; i < _passages.length; i++) {
+      if (!_passages[i].stairsdown && !_passages[i].stairsup)
         _passages[i]['depth'] = player.depth;
-      }
     }
 
     _passages.push(_wait);
