fixed map/char gen

--- a/asciilike/index.html
+++ b/asciilike/index.html
@@ -1365,7 +1365,6 @@ setup.prefabs = [
 
 class GameManager {
   constructor(rooms) {
-    console.log(rooms);
     this.map = [];
     this.npcs = [];
     this.mapWidth = 10;
@@ -1386,11 +1385,17 @@ class GameManager {
     this.player = new Character("Erik", 1, 10, 1, 0, 0, 0);
     this.player.isPlayer = true;
 
-    this.eventCharacters = this.generateCharacters(); 
+    this.eventCharacters = {}
     let _depth = 0;
-    // for (let row = 0; row < this.mapHeight; row++)
-    //   for (let col = 0; col < this.mapWidth; col++)
-    //     this.eventCharacters[`${_depth}:${row}:${col}`] = null;
+    for (let d = 0; d < this.maxDepth; d++) {
+      for (let row = 0; row < this.mapHeight; row++)
+        for (let col = 0; col < this.mapWidth; col++)
+          this.eventCharacters[`${d}:${row}:${col}`] = null;
+    }
+    // generate monsters
+    this.eventCharacters = this.generateCharacters();
+    console.log(this.eventCharacters);
+
 
     this.flashlight = {
       'status': 'off',
@@ -1497,16 +1502,19 @@ class GameManager {
         this.map[d][_downrow][_downcol] = { 'passage': 'down1', 'visited': false, 'sanity': 5, 'stairsdown': true };
       if (_uprow != null && _upcol != null)
         this.map[d][_uprow][_upcol] = { 'passage': 'up1', 'visited': false, 'sanity': 5, 'stairsup': true };
+
     }
+
+
     console.log(this.map);
   }
 
   generateCharacters() {
     let _chars = {};
 
+    // monsters
     for (let d = 0; d < this.maxDepth; d++) {
-      // monsters
-      for (let _i = d+1; _i >= 0; _i--) {
+      for (let _i = d + 1; _i > 0; _i--) {
         let _row, _col, _key;
         do {
           _row = getRandomInteger(1, this.mapHeight);
@@ -1520,26 +1528,31 @@ class GameManager {
       }
     }
 
-    console.log(_chars);
     return _chars;
   }
 
   hasCharacter(row, col, depth) {
-    if (this.eventCharacters[`${depth}:${row}:${col}`] != null)
+    let _key = `${depth}:${row}:${col}`;
+    console.log(this.eventCharacters);
+    if (this.eventCharacters[_key] != null) {
+    // if (_key in this.eventCharacters && this.eventCharacters[_key] !== null)
+      // if (this.eventCharacters[`${depth}:${row}:${col}`] != null)
+      console.log("WHOA NELLY")
       return true;
+    }
     return false;
   }
   getCharacter(row, col, depth) {
     return this.eventCharacters[`${depth}:${row}:${col}`];
   }
-  createCharacter(row, col, depth, type) {
-    if (type == "monster") {
-      this.eventCharacters[`${depth}:${row}:${col}`] = { 'type': type, 'monster': _monsters[getRandomInteger(0, _monsters.length)] };
+  // createCharacter(row, col, depth, type) {
+  //   if (type == "monster") {
+  //     this.eventCharacters[`${depth}:${row}:${col}`] = { 'type': type, 'monster': _monsters[getRandomInteger(0, _monsters.length)] };
 
-    } else
-      this.eventCharacters[`${depth}:${row}:${col}`] = { 'type': type };
-    return this.eventCharacters[`${depth}:${row}:${col}`];
-  }
+  //   } else
+  //     this.eventCharacters[`${depth}:${row}:${col}`] = { 'type': type };
+  //   return this.eventCharacters[`${depth}:${row}:${col}`];
+  // }
   destroyCharacter(row, col, depth) {
     this.eventCharacters[`${depth}:${row}:${col}`] = null;
   }
@@ -1622,13 +1635,13 @@ class GameManager {
         else {
           if (this.getPassageVisited(r, c, depth))
             _cls = 'visited';
-          else 
+          else
             _cls = '';
 
           // tbd - temp viz
           if (this.hasCharacter(r, c, depth)) {
-            _cls = 'monster';
-            _txt = "+";
+            _cls = ' monster';
+            // _txt = "+";
           } else if (this.getPassage(r, c, depth) == setup.prefabs[0]) {
             _cls += ' empty';
             // else if (this.getPassage(r,c) == setup.prefabs[1])
@@ -1656,7 +1669,7 @@ class GameManager {
           }
         }
 
-        ret += "<div class='map-cell " + _cls + "'>" + _txt + "</div>";
+        ret += "<div class='map-cell " + _cls + "'></div>";
 
         // ret += "<td class='" + _cls + "'></td>";
       }
@@ -1664,6 +1677,7 @@ class GameManager {
     }
     // ret += "</table>";
     ret += "</div>";
+
     return ret;
   }
 
@@ -1841,10 +1855,6 @@ class GameManager {
 
     return _friends;
   }
-
-  generateCharacter(row, col) {
-  }
-
 };
 window.GameManager = GameManager;
 
@@ -2021,7 +2031,8 @@ You click the [[flashlight]] on and are relieved to see the beam at full strengt
             &lt;&lt;if $game.hasCharacter($game.player.row, $game.player.col, $game.player.depth)&gt;&gt;
               &lt;&lt;set _char to $game.getCharacter($game.player.row, $game.player.col, $game.player.depth)&gt;&gt;
             &lt;&lt;else&gt;&gt;
-              &lt;&lt;set _char to $game.createCharacter($game.player.row, $game.player.col, $game.player.depth, &#39;monster&#39;)&gt;&gt;
+              &lt;h1&gt;ERROR&lt;/h1&gt;
+              /* &lt;&lt;set _char to $game.createCharacter($game.player.row, $game.player.col, $game.player.depth, &#39;monster&#39;)&gt;&gt; */
             &lt;&lt;/if&gt;&gt;
             /* Monster is: &lt;&lt;=_monster&gt;&gt; */
 
@@ -2161,7 +2172,7 @@ You click the [[flashlight]] on and are relieved to see the beam at full strengt
         &lt;&lt;/for&gt;&gt;
       &lt;&lt;/if&gt;&gt;
     &lt;/div&gt;
-    &lt;div class=&quot;map&quot; id=&quot;map-holder&quot;&gt;
+    &lt;div class=&quot;map&quot;&gt;
         &lt;&lt;=$game.vizMap($game.player.depth)&gt;&gt;
     &lt;/div&gt;
     &lt;div class=&quot;messages&quot;&gt;
